# Automa-o-Celesc

./: .gitignore  Dockerfile  README.md  pyproject.toml
api_postman/: CELESC.postman_collection.json
app/: .env  functions.py  main.py
app/Objects/: Obj_ApiBase.py  Obj_ApiSpring.py  Obj_ApiSpringBase.py  Obj_Geral.py  Obj_PDF_Reader.py
app/data/: routes.json
