[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Nycolas Galdino <nycolaspimentel12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
retry = "^0.9.2"
requests = "^2.32.3"
pymupdf = "^1.24.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
